[package]
name = "bounty-escrow"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["alloc", "testutils"] }
proptest = { version = "=1.6.0", default-features = false, features = ["std"] }
